Bug 150561 - Page dimension don't match paper format in Print Preview: like claiming 210x148 to be A4
Summary: Page dimension don't match paper format in Print Preview: like claiming 210x1...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-23 13:28 UTC by Telesto
Modified: 2022-09-21 13:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.59 KB, application/vnd.oasis.opendocument.text)
2022-08-23 13:29 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-08-23 13:28:48 UTC
Description:
Page measures don't match paper format in Print Preview: like claiming 210x148 to be A4

Steps to Reproduce:
1. Open the attached file
2. Press print
3. Press next page (in preview)
4. Shows 210x148 (A4)
5. Press previous page (now 210x297 mentioned as A5)

Actual Results:
Page dimension don't match paper format 

Expected Results:
Paper format & page size match


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1c1647e6ee252fe68d7406d01043e88f1721590f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-08-23 13:29:05 UTC
Created attachment 181979 [details]
Example file
Comment 2 Telesto 2022-08-23 13:33:31 UTC
Also in
Version: 6.3.7.0.0+ (x86)
Build ID: 726535ec30f12697ceccd2f0640d9371a64dc5bd
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

Still OK in
Version: 6.2.9.0.0+ (x86)
Build ID: 5f01fe15eb2661f1f9ce12d1d99dc2a705b462ee
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 3 Telesto 2022-08-23 14:58:39 UTC
Bisected to:
$ git bisect good 1641af2399e268d79ef3738cdf71be5409524924 is the first bad commit
commit 1641af2399e268d79ef3738cdf71be5409524924
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Dec 1 12:44:28 2018 -0800

    source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647

    source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647

:040000 040000 2aad48ada0090e6742a40b16a214805e14663aa4 3d6371f400b808fcf9f69be6d3094dfcb3d137c7 M      instdir


author	Daniel <danielfaleirosilva@gmail.com>	2018-05-15 22:58:38 -0300
committer	Daniel Silva <danielfaleirosilva@gmail.com>	2018-11-29 13:02:16 -0200
commit 2c23a96f7b6888c0e05fdc2aba57f03cd797b647 (patch)
tree 046bb25699a9e357c2344d30009d50ab800e0952
parent e3ce6ea30e2cdd81857597f50ef5e0a6acd198ee (diff)
tdf#67905 adds an option to disable print preview in print dialog
Comment 4 Julien Nabet 2022-08-23 15:30:00 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 5 Julien Nabet 2022-08-23 15:30:22 UTC
I gave a try with:
https://gerrit.libreoffice.org/c/core/+/138736
Comment 6 Commit Notification 2022-08-25 16:22:38 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/653d098a00f737e79f2e1ea81978320b2d5d27cc

tdf#150561: Page dimension don't match paper format in Print Preview

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2022-08-25 16:53:18 UTC
Don't hesitate to reopen this tracker if you still reproduce this with a daily build which includes the patch.
Comment 8 Commit Notification 2022-09-21 09:30:22 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/35137efbb2b50b5eae8c9377f658f7bc8f23d9cc

tdf#150561: Page dimension don't match paper format in Print Preview

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Telesto 2022-09-21 13:38:22 UTC
(In reply to Julien Nabet from comment #7)
> Don't hesitate to reopen this tracker if you still reproduce this with a
> daily build which includes the patch.

Sorry for the delay.. I confirm it's working 
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dc92a4d973086ce8a6a5f75ba0f4d4c9ca05537a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

However I did find another glitch, but lets probably unrelated to the issue here