tdf#150561: Page dimension don't match paper format in Print Preview

...like claiming 210x148 to be A4

Page size may have changed so sync mePaper with it

Change-Id: I7d7329bbacfb2f0bd56e495b7390eedebecee02c